<resources>
    <string name="app_name">Bhagavad Geeta</string>
    <string-array name="chapters">
        <item>Chapter 1</item>
        <item>Chapter 2</item>
        <item>Chapter 3</item>
        <item>Chapter 4</item>
        <item>Chapter 5</item>
        <item>Chapter 6</item>
        <item>Chapter 7</item>
        <item>Chapter 8</item>
        <item>Chapter 9</item>
        <item>Chapter 10</item>
        <item>Chapter 11</item>
        <item>Chapter 12</item>
        <item>Chapter 13</item>
        <item>Chapter 14</item>
        <item>Chapter 15</item>
        <item>Chapter 16</item>
        <item>Chapter 17</item>
        <item>Chapter 18</item>
    </string-array>
    <string name="_47">सञ्जय उवाच | एवमुक्त्वार्जुन: सङ्ख्ये रथोपस्थ उपाविशत् | विसृज्य सशरं चापं शोकसंविग्नमानस: || 47||</string>
    <string name="shlokName">अर्जुनविषादयोग</string>
    <string name="meaningText">"Whoever offers Me with devotion-a leaf, a flower, a fruit, or water, I accept that (gift) of the pure-hearted man which has been devotionally presented."</string>
    <string name="wordMeaning">"verseyaḥ—who; mām—me; ajam—unborn; anādim—beginningless; cha—and; vetti—know; loka—of the universe; mahā-īśhvaram—the Supreme Lord; asammūḍhaḥ—undeluded; saḥ—they; martyeṣhu—among mortals; sarva-pāpaiḥ—from all evils; pramuchyate—are freed from-3"</string>
    <string name="transliteration">buddhir jñānam asammohaḥ kṣhamā satyaṁ damaḥ śhamaḥ
sukhaṁ duḥkhaṁ bhavo ’bhāvo bhayaṁ chābhayameva cha
</string>
    <string name="decription">The first chapter of the Bhagavad Gita - \"Arjuna Vishada Yoga\" introduces the setup, the setting, the characters and the circumstances that led to the epic battle of Mahabharata, fought between the Pandavas and the Kauravas. It outlines the reasons that led to the revelation of the of Bhagavad Gita.\nAs both armies stand ready for the battle, the mighty warrior Arjuna, on observing the warriors on both sides becomes increasingly sad and depressed due to the fear of losing his relatives and friends and the consequent sins attributed to killing his own relatives. So, he surrenders to Lord Krishna, seeking a solution. Thus, follows the wisdom of the Bhagavad Gita."</string>
    <string name="read_chapter_wise">READ CHAPTER WISE</string>
    <string name="read_random_verse">READ RANDOM VERSE</string>
    <string name="or_search_a_particular_verse">-----Or search a particular verse-----</string>
    <string name="go_to_verse">GO TO VERSE</string>
    <string name="transliterations">Transliteration</string>
    <string name="translation">Translation</string>
    <string name="chapter">CHAPTER</string>
    <string name="_10">10</string>
    <string name="chapter_1">Chapter: 1</string>
    <string name="verse_1">Verse: 1</string>
    <string name="word_meanings">Word Meanings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="about_us">About Us</string>
    <string name="chapter_no_1S">Chapter No: 1</string>
    <string name="about_app">Bhagavad Gita teaches us the right way to lead our life. Every man is in difficulty in so many ways, as Arjuna was in, having to fight the Battle of Kurukshetra.Bhagavad Gita quotes on karma and life give us the message that common mortals should transcend above the worldly affairs and earthly desires (lust, anger, and greed). We should focus more on the service of humanity.\nThis app contains all the chapters and verse with sanskrit shlok and its meaning in easy language.Lets explore the true meaning of life with the light of Bhagavad Geeta.</string>
</resources>