<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/shlok_bkgnd"
    android:layout_marginVertical="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chapter_name"
            android:text="@string/shlokName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold|normal"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/app_orange"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="12dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/chapter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapter_1"
                android:layout_marginHorizontal="3dp"
                android:textColor="@color/app_brown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/verse_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verse_1"
                android:layout_marginHorizontal="3dp"
                android:textColor="@color/app_brown"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/shlokText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_47"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/wordMeaningHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_meanings"
            android:textColor="@color/app_red"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginVertical="12dp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/wordMeaningText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordMeaning"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/transliterationHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transliterations"
            android:textColor="@color/app_red"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginVertical="12dp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/transliterationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transliteration"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/meaningHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translation"
            android:textColor="@color/app_red"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginVertical="12dp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/meaningText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meaningText"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>


<!--</androidx.cardview.widget.CardView>-->